# image_delivery

./: CMakeLists.txt  pch.h
client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp
server/: CMakeLists.txt  server.cpp  server.h  server_main.cpp
source_img/: bladerunner82.jpg:Zone.Identifier
